syntax = "proto3";

package user.service;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
option go_package = "/service";

service User{

  rpc CreateUser(CreateUserRequest) returns (UserVO) {
    option (google.api.http) = {
      post : "/user"
      body : "*"
    };
  }
  rpc GetUser(IdRequest) returns (UserVO) {
    option (google.api.http) = {
      get : "/user/{id}"

    };
  }

  rpc GetUserIdentity(UserIdentityRequest) returns (UserVO) {
    option (google.api.http) = {
      get : "/user/identity"

    };
  }
  rpc CreateUserIdentity(UserIdentityRequest) returns (UserVO) {
    option (google.api.http) = {
      post : "/user/identity"
      body : "*"
    };
  }
  rpc ListUser(IdsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get : "/user"
    };
  }
}
message UserIdentityRequest{
  string identifier =1;
  string credential=2;
  string identityType=3;
}
message IdsRequest{
  string ids=1;
}
message IdRequest{
  int64 id=1;
}
message CreateUserRequest{
  string nickname =1;
  string identifier =3;
  string credential=2;
  string identityType=4;
}
message UserVO{
  int64 id=1;
  string name =2;
}